--- a/FinalProjectVR/Areas/Admin/Views/Testimonial/Index.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Testimonial/Index.cshtml
@@ -7,40 +7,56 @@
 
 <h1>Istifadəci  Şərhləri</h1>
 
-<table class="table table-bordered">
-    <thead>
-        <tr>
-            <th>Ad</th>
-            <th>Soyad</th>
-            <th>Mesaj</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.Name</td>
-                <td>@item.Suranme</td>
-                <td>@item.Message</td>
-                <td>
-                    @if (item.Delete == 0)
-                    {
-                        <span class="badge badge-success">Active</span>
-                    }
-                    else
-                    {
-                        <span class="badge badge-warning">Inactive</span>
-                    }
-                </td>
-                <td>
-                    <a href="~/Admin/Testimonial/UpdateTestimonial/@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
-                    <a href="~/Admin/Testimonial/DeleteTestimonial/@item.Id" class="btn btn-warning"><i class="fas fa-trash-alt"></i></a>
-                    <a href="~/Admin/Testimonial/HardDeleteTestimonial/@item.Id" class="btn btn-danger"><i class="fas fa-times"></i></a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
 
-<a href="/Admin/Testimonial/AddTestimonial" class="btn btn-primary">@DefaultConstantValue.ADD_MESSAGE</a>
+<div class="container-fluid">
+    <div class="card shadow mb-4">
+        <div class="card-body">
+            <div class="table-responsive">
+
+
+                <p>
+
+                    <a href="/Admin/Testimonial/AddTestimonial" class="btn btn-primary">@DefaultConstantValue.ADD_MESSAGE</a>
+                </p>
+
+                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                  
+                    <thead>
+                        <tr>
+                            <th>Ad</th>
+                            <th>Soyad</th>
+                            <th>Mesaj</th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>@item.Name</td>
+                                <td>@item.Suranme</td>
+                                <td>@item.Message</td>
+                                <td>
+                                    @if (item.Delete == 0)
+                                    {
+                                        <span class="badge badge-success">Active</span>
+                                    }
+                                    else
+                                    {
+                                        <span class="badge badge-warning">Inactive</span>
+                                    }
+                                </td>
+                                <td>
+                                    <a href="~/Admin/Testimonial/UpdateTestimonial/@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
+                                    <a href="~/Admin/Testimonial/DeleteTestimonial/@item.Id" class="btn btn-warning"><i class="fas fa-trash-alt"></i></a>
+                                    <a href="~/Admin/Testimonial/HardDeleteTestimonial/@item.Id" class="btn btn-danger"><i class="fas fa-times"></i></a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
