--- a/FinalProjectVR/Views/About/Index.cshtml
+++ b/FinalProjectVR/Views/About/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<DTOLayer.AboutDTOs>
+﻿@model List<DTOLayer.AboutDTO.AboutGetActivDTOs>
 
 
 <div class="ak-height-125 ak-height-lg-40"></div>
