--- a/FinalProjectVR/Views/Blog/BlogDetail.cshtml
+++ b/FinalProjectVR/Views/Blog/BlogDetail.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model CoreLayer.Results.Concrete.SuccessDataResult<DTOLayer.BlogDTOs>
+@model CoreLayer.Results.Concrete.SuccessDataResult<DTOLayer.BlogDTO.BlogDTOs>
 
 @{
     ViewData["Title"] = "BlogDetail";
