--- a/FinalProjectVR/Views/Blog/Index.cshtml
+++ b/FinalProjectVR/Views/Blog/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model CoreLayer.Results.Concrete.SuccessDataResult<System.Collections.Generic.List<DTOLayer.BlogDTOs>>
+﻿@model CoreLayer.Results.Concrete.SuccessDataResult<System.Collections.Generic.List<DTOLayer.BlogDTO.BlogDTOs>>
 
 
 @{
