--- a/FinalProjectVR/Areas/Admin/Views/About/AddAbout.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/About/AddAbout.cshtml
@@ -1,34 +1,35 @@
-﻿@model AboutDTOs
+﻿@model AboutCreate
+
 @{
-    ViewData["Title"] = "UpdateAbout";
+    ViewData["Title"] = "AddAbout";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>Haqqımızda Yeniləmək</h1>
+
 
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="UpdateAbout">
+        <form asp-action="AddAbout" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Misson" class="control-label">Misson</label>
-                <textarea asp-for="Misson" class="form-control"></textarea>
+                <label asp-for="Misson" class="control-label">Ad</label>
+                <input asp-for="Misson" class="form-control" />
                 <span asp-validation-for="Misson" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Vision" class="control-label">Vision</label>
-                <textarea asp-for="Vision" class="form-control"></textarea>
+                <label asp-for="Vision" class="control-label">Soyad</label>
+                <input asp-for="Vision" class="form-control" />
                 <span asp-validation-for="Vision" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="History" class="control-label">History</label>
-                <textarea asp-for="History" class="form-control"></textarea>
+                <label asp-for="History" class="control-label">Position</label>
+                <input asp-for="History" class="form-control" />
                 <span asp-validation-for="History" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <input type="submit" value="@DefaultConstantValue.Update_MESSAGE" class="btn btn-primary" />
+                <input type="submit" value="@DefaultConstantValue.ADD_MESSAGE" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -37,4 +38,5 @@
 <div>
     <a asp-action="Index">@DefaultConstantValue.RETURN_TO_BACK</a>
 </div>
+
 
