--- a/FinalProjectVR/Areas/Admin/Views/FAQ/Index.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/FAQ/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<DTOLayer.FAQDTOs>
+﻿@model List<FAQDTOs>
 
 
 
@@ -8,39 +8,53 @@
 }
 
    <h1>FAQ</h1>
+<div class="container-fluid">
+    <div class="card shadow mb-4">
+        <div class="card-body">
+            <div class="table-responsive">
 
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>Sual</th>
-                <th>Cavab</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>@item.Question</td>
-                    <td>@item.Answer</td>
-                    <td>
-                        @if (item.Delete == 0)
-                        {
-                            <span class="badge badge-success">Aktiv</span>
-                        }
-                        else
-                        {
-                            <span class="badge badge-warning">Passiv</span>
-                        }
-                    </td>
-                    <td>
-                        <a href="~/Admin/FAQ/UpdateFAQ/@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
-                        <a href="~/Admin/FAQ/DeleteFAQ/@item.Id" class="btn btn-warning"><i class="fas fa-trash-alt"></i></a>
-                        <a href="~/Admin/FAQ/HardDeleteFAQ/@item.Id" class="btn btn-danger"><i class="fas fa-times"></i></a>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
 
-<a href="/Admin/FAQ/AddFaq" class="btn btn-primary">@DefaultConstantValue.ADD_MESSAGE</a>
+                <p>
+
+                    <a href="~/Admin/Blog/AddBlog" class="btn btn-primary">@DefaultConstantValue.ADD_MESSAGE</a>
+                </p>
+
+                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                    <thead>
+                        <tr>
+                            <th>Sual</th>
+                            <th>Cavab</th>
+                            <th>Aktivlik</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>@item.Question</td>
+                                <td>@item.Answer</td>
+                                <td>
+                                    @if (item.Delete == 0)
+                                    {
+                                        <span class="badge badge-success">Aktiv</span>
+                                    }
+                                    else
+                                    {
+                                        <span class="badge badge-warning">Passiv</span>
+                                    }
+                                </td>
+                                <td>
+                                    <a href="~/Admin/FAQ/UpdateFAQ/@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
+                                    <a href="~/Admin/FAQ/DeleteFAQ/@item.Id" class="btn btn-warning"><i class="fas fa-trash-alt"></i></a>
+                                    <a href="~/Admin/FAQ/HardDeleteFAQ/@item.Id" class="btn btn-danger"><i class="fas fa-times"></i></a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
