--- a/FinalProjectVR/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -15,7 +15,9 @@
     <link href="~/web-Admin/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="~/web-Admin/css/sb-admin-2.min.css" rel="stylesheet">
     <!-- Custom styles for this template-->
     <link href="~/web-Admin/css/sb-admin-2.min.css" rel="stylesheet">
 
@@ -267,6 +269,8 @@
 
     <!-- Bootstrap core JavaScript-->
     <script src="~/web-Admin/vendor/jquery/jquery.min.js"></script>
+    <!-- Bootstrap core JavaScript-->
+    <script src="~/web-Admin/vendor/jquery/jquery.min.js"></script>
     <script src="~/web-Admin/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Core plugin JavaScript-->
@@ -275,7 +279,23 @@
     <!-- Custom scripts for all pages-->
     <script src="~/web-Admin/js/sb-admin-2.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Page level plugins -->
+    <script src="~/web-Admin/vendor/chart.js/Chart.min.js"></script>
+
+    <!-- Page level custom scripts -->
+    <script src="~/web-Admin/js/demo/chart-area-demo.js"></script>
+    <script src="~/web-Admin/js/demo/chart-pie-demo.js"></script>
+
+    <script src="~/web-Admin/vendor/datatables/jquery.dataTables.min.js"></script>
+    <script src="~/web-Admin/vendor/datatables/dataTables.bootstrap4.min.js"></script>
+
+    <!-- Page level custom scripts -->
+    <script src="~/web-Admin/js/demo/datatables-demo.js"></script>
+
+    <script src="~/web-Admin/vendor/sweetalert2/sweetalert2.all.js"></script>
+    <script src="~/web-Admin/vendor/sweetalert2/sweetalert2.all.min.js"></script>
+    <script src="~/web-Admin/vendor/sweetalert2/sweetalert2.js"></script>
+    <script src="~/web-Admin/vendor/sweetalert2/sweetalert2.min.js"></script>
     @RenderSection("Scripts", false)
 
 </body>
