--- a/FinalProjectVR/Areas/Admin/_ViewImports.cshtml
+++ b/FinalProjectVR/Areas/Admin/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using CoreLayer.DefaultValues
 
+@using DTOLayer.AboutDTO
+@using DTOLayer.BlogDTO
+@using DTOLayer.FAQDTO
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
