--- a/FinalProjectVR/Views/Pricing/Order.cshtml
+++ b/FinalProjectVR/Views/Pricing/Order.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@using DTOLayer
+@using EntityLayer.Models
+@model Order
+@{
     ViewData["Title"] = "Order";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -48,11 +51,11 @@
                      </div>
                 </div>
                     <div class="type_1">
-                     <label for="PricingId" class="form-label">Paket Seç</label>
-                     <select name="PricingId" id="PricingId" class="form-control">
-                     @foreach (var option in ViewBag.PricingOptions)
+                     <label asp-for="PricingId" class="form-label">Paket Seç</label>
+                     <select asp-for="PricingId"  class="form-control">
+                     @foreach (var option in ViewData["Prices"] as IEnumerable<PricingDTOs>)
                      {
-                      <option value="@option.Value">@option.Text</option>
+                      <option value="@option.Id">@option.Title</option>
                      }
                      </select>
                    </div>
